s3 first go through complete

--- a/S3.md
+++ b/S3.md
@@ -43,12 +43,12 @@
   6. Secure data with ACL & Bucket Policies
 
 
-* **Storage Classes:**
+* **Storage Classes:** in order of most-expensive to least
 
   - Standard: designed to sustain loss of 2 facilities concurrently
   - Infrequently Accessed (IA): charged retrieval fee
-  - One Zone IA
   - Intelligent Tiering: uses ML to cost optimize
+  - One Zone IA
   - Glacier: configurable retrieval times ranging from minutes to hours
   - Glacier Deep Archive: 12 hour retrieval times
 
@@ -60,3 +60,92 @@
   - Storage Management (see *Storage Classes*)
   - Data Transfer
   - Transfer Acceleration
+
+
+* **Security & Encryption:**
+
+  - By default all newly create buckets are *PRIVATE*
+  - Setup access control using *Bucket Policies* and *Access Control Lists*
+  - S3 buckets can be configure to create access logs
+  - *Encryption In Transit* achieved by SSL/TLS
+  - *Encryption At Rest (Server Side)* achieved by S3 Managed Keys (SSE-S3), AWS Key Management Service (SSE-KMS), SSE with Customer Provided Keys (SSE-C)
+  - *Client Side Encryption*
+
+
+* **Versioning:**
+
+  - Once enabled on a bucket, cannot be disabled, only suspended
+  - Integrates with Lifecycle rules
+  - Stores all versions of an object e.g. all writes and delete markers
+  - Great backup tool!
+  - Versioning has MFA delete capability
+
+
+* **Lifecycle Management:**
+
+  - Automates moving objects between different storage tiers
+  - Can be used in conjunction with versioning
+  - Can be applied to current and previous versions
+
+
+* **AWS Organizations & Consolidated Billing:**
+
+ - Consolidate multiple AWS accounts into an organization that you create and centrally manage
+ - Root (Paying Account): master account (best practices is use for billing only)
+ - OU's or Organizational Units broken down underneath
+ - Apply permissions using policies
+ - Paying Acct. —> Dev, Staging, Prod (paying acct. sees aggregate bill)
+ - Get volume pricing discount
+ - Always enable MFA on root account
+ - Enable/Disable AWS services using Service Control Policies either on OU or individual account level
+
+
+* **Cross-Account Access:**
+
+  - 3 ways to share S3 buckets across accounts:
+
+    1. Using Bucket Policies & IAM (Programmatic access only)
+
+    2. Using Bucket ACL's & IAM (Programmatic access only)
+
+    3. IAM Roles (Programmatic and Console access)
+
+
+* **Cross Region Replication:**
+
+  - Requires versioning to be enabled on the buckets
+  - Revisit this; wasn't working
+
+
+* **Transfer Acceleration:**
+
+  - Utilizes CloudFront Edge Network to accelerate uploads
+  - *\<bucket_name\>.s3-accelrate.amazonaws.com*
+  - see s3 transfer accelerate tool https://s3-accelerate-speedtest.s3-accelerate.amazonaws.com/en/accelerate-speed-comparsion.html
+
+
+* **CloudFront Overview:**
+
+  - A content delivery network (CDN) is a system of distributed servers (network) that delivers webpages or web content to a user based on their geographic location, origin of the webpage, and a content deliver server.
+  - **Edge Location** - where content is cached; separate to an AWS region/AZ
+  - **Origin** - origin of all the files the CDN will distribute. e.g. S3 Bucket, EC2 Instance, Elastic Load Balancer, or Route53
+  - **Distribution** - name given the CDN which consists of a collection of edge locations
+  - RTMP for media streaming vs. Web Distribution for websites
+  - Edge locations not READ only. Can write to them too.
+  - Objects are cached for the TTL (Time To Live)
+  - Can clear cached objects but will be charged.
+
+
+* **Storage Gateway:**
+
+  - Connect data center to AWS
+  - File gateway, Volume gateway (stored & cached), Tape gateway
+  - NFS connect on-premise to S3
+  - Volume store virtual hard disk drives in the cloud. EBS (Elastic Block Store)
+  - Not showing up on exams recently (more on sys ops exam)... take practice exam to feel this out
+
+
+* **Athena vs. Macie:**
+
+  - Athena is interactive query service that allows for analyzing and querying data in S3 using standard SQL. Serverless, no provisioning. No need for complex ETL.  Used to query log files, generate business reports, cost and usage reports, query click-stream data
+  - Macie... PII? Personally Identifiable Information is data used to establish a persons identity.  Can be exploited resulting in identity theft and financial fraud.  Macie now is security service using ML and NLP to discover, classify, and protect sensitive data stored in S3.
